--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" class="dark-style layout-menu-fixed" dir="ltr" data-theme="theme-default" data-assets-path="./assets/" data-template="horizontal-menu-template-dark">
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
       <title>Cek IMEI Kemenperin Alternatif</title>
       <!-- Favicon -->
