--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="form-check">
             </div>
           </div>
-          <button class="btn btn-primary d-grid w-100" onclick="Fn_submit();">
+          <button class="btn btn-primary d-grid w-100">
             Cek IMEI
           </button>
         </form>
