Fix CORS with Pusher

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
   
 
       <!-- Main JS -->
+      <script src="assets/js/pusher.min.js"></script>
       
       <!-- Page JS -->
       <script src="assets/js/pages-imei.js"></script>
